refactor: clean up code and optimize list handling
- Removed redundant comments explaining straightforward functionality.
- Replaced `.collect(Collectors.toList())` with `.toList()` for simplicity.
- Eliminated unnecessary imports.
- Marked `fieldValue` as transient in `ResourceNotFoundException`.
- Added `@Getter` annotation to `ResourceNotFoundException` to simplify getter method management.